# buildroot-bouffalo-cmake-example

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflow/: build.yml
.github/workflows/: build.yml
cmake/triplets/: x64-linux-boufallo.cmake
src/: main.cpp
